# inter_iit_uav_fleet

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cfg/: .params.yaml.swp  ocam_640x480.yaml  params.yaml  reconfig.cfg
include/inter_iit_uav_fleet/: callbacks.h  machine.h  outlier_filter.h  pose.h
inter_iit_uav_fleet/: package.xml
inter_iit_uav_fleet/cfg/: params.yaml  reconfig.cfg  start_script.sh
inter_iit_uav_fleet/include/inter_iit_uav_fleet/: outlier_filter.h
inter_iit_uav_fleet/launch/: detect.launch
inter_iit_uav_fleet/msg/: RouterData.msg  UTMPose.msg
inter_iit_uav_fleet/src/: detect.cpp  planner.cpp
launch/: detect.launch  main.launch  obj_det.launch  planner.launch  router.launch
msg/: Pose.msg  Poses.msg
src/: detect.cpp  object_detect.cpp  planner.cpp  router.cpp
