<?xml version="1.0" ?>
<package format="2">

  <name>inter_iit_uav_fleet</name>
  <version>0.0.0</version>
  <description>The inter_iit_uav_fleet package</description>

  <maintainer email="aerialroboticsiitk@gmail.com">Aerial Robotics IITK</maintainer>
  <license>@TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>

</package>